--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -29,7 +29,7 @@
     <img src="/img/bison-full_97x50.png">
   </a>
   <a href="/" class="d-block d-md-none pointer hoverbg mx-2">
-    <img src="/img/bison-square_50.png">
+    <img class="bison-logo-square">
   </a>
   <div id="headerSpace"></div>
   <div class="mainlinks fs18 pe-2 text-nowrap">
