automate transfer sizing

--- a/client/webserver/site/src/css/icons.scss
+++ b/client/webserver/site/src/css/icons.scss
@@ -28,26 +28,32 @@
 
 .micro-icon {
   height: 15px;
+  width: 15px;
 }
 
 .mini-icon {
   height: 20px;
+  width: 20px;
 }
 
 .small-icon {
   height: 25px;
+  width: 25px;
 }
 
 .medium-icon {
   height: 30px;
+  width: 30px;
 }
 
 .large-icon {
   height: 40px;
+  width: 40px;
 }
 
 .enourmous-icon {
   height: 60px;
+  width: 60px;
 }
 
 .ico-spinner::before {
