--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -291,7 +291,7 @@
                         <span data-tmpl="baseTokenSwapFees" class="mono"></span>
                       </div>
                     </div>
-                    <div class="d-flex align-items-center justify-content-between lh1">
+                    <div class="grey d-flex align-items-center justify-content-between lh1">
                       <span>
                         <span class="fs20">└─</span>
                         <span>Booking Fees</span>
@@ -431,7 +431,7 @@
                     <div data-tmpl="starvedBox" class="fs17 text-justify">
                       You do not appear to have the funding to satisfy your program
                       configuration. If you'd like, we can still start in this starved
-                      condition, but the bot may not perform as expected.
+                      condition, but the bot will probably not perform as intended.
                     </div>
                   </div>
 
