--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -469,51 +469,20 @@
                 </div>
 
                 {{- /* BOOKING FEES */ -}}
-                <div data-tmpl="bookingFeesBox" class="flex-stretch-column">
-                  <div data-tmpl="bookingFeesSimple" class="flex-stretch-column">
-                    <div class="d-flex align-items-center justify-content-between">
-                      <span class="me-1 fs16">Booking Fees</span>
-                      <span class="d-flex align-items-end">
-                        <span data-tmpl="bookingFeesLots" class="fs16"></span>
-                        <span class="fs14 grey ms-1">lots</span>
-                      </span>
-                    </div>
-                    <div class="d-flex align-items-end justify-content-end">
-                      <span class="fs14 grey me-1">x</span>
-                      <span data-tmpl="bookingFeesPerLot" class="fs16"></span>
-                      <span class="fs14 grey ms-1">
-                        <span data-fee-ticker></span> per lot
-                      </span>
-                    </div>
+                <div class="flex-stretch-column">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <span class="me-1 fs16">Booking Fees</span>
+                    <span class="d-flex align-items-end">
+                      <span data-tmpl="bookingFeesLots" class="fs16"></span>
+                      <span class="fs14 grey ms-1">lots</span>
+                    </span>
                   </div>
-                  <div data-tmpl="bookingFeesComplex" class="flex-stretch-column">
-                    <div class="d-flex align-items-center justify-content-between">
-                      <span class="me-1 fs16">Booking Fees</span>
-                      <span class="d-flex align-items-end">
-                        <span data-tmpl="bookingFeesSellLots" class="fs16"></span>
-                        <span class="fs14 grey ms-1">sell lots</span>
-                      </span>
-                    </div>
-                    <div class="d-flex align-items-end justify-content-end">
-                      <span class="fs14 grey me-1">x</span>
-                      <span data-tmpl="bookingFeesPerSellLot" class="fs16"></span>
-                      <span class="fs14 grey ms-1">
-                        <span data-fee-ticker></span> per sell lot
-                      </span>
-                    </div>
-                    <div class="d-flex align-items-end justify-content-end">
-                      <span class="fs14 grey me-1">+</span>
-                      <span data-tmpl="bookingFeesBuyLots" class="fs16"></span>
-                      <span class="fs14 grey ms-1">buy lots</span>
-                      
-                    </div>
-                    <div class="d-flex align-items-end justify-content-end">
-                      <span class="fs14 grey me-1">x</span>
-                      <span data-tmpl="bookingFeesPerBuyLot" class="fs16"></span>
-                      <span class="fs14 grey ms-1">
-                        <span data-fee-ticker></span> per buy lot
-                      </span>
-                    </div>
+                  <div class="d-flex align-items-end justify-content-end">
+                    <span class="fs14 grey me-1">x</span>
+                    <span data-tmpl="bookingFeesPerLot" class="fs16"></span>
+                    <span class="fs14 grey ms-1">
+                      <span data-fee-ticker></span> per lot
+                    </span>
                   </div>
                   <div class="d-flex align-items-end justify-content-end">
                     <span class="fs14 grey me-1">=</span>
