--- a/client/webserver/site/src/css/components.scss
+++ b/client/webserver/site/src/css/components.scss
@@ -54,6 +54,16 @@ button {
     }
   }
 
+  &.warning {
+    border-color: var(--text-warning);
+    color: var(--text-warning);
+
+    &:hover {
+      background-color: var(--text-warning);
+      color: var(--btn-danger-hover-color);
+    }
+  }
+
   &.go {
     background-color: var(--btn-go-bg);
     color: var(--btn-go-color);
